# BGP-Sentry

./: ..gitignore.swp  .env  .env.100  .env.1250  .env.1600  .env.200  .env.350  .env.400  .env.50  .env.650  .env.800  .gitignore  ANALYSIS_QUICK_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DETAILS.md  ATTACK_EXPERIMENT_QUICKSTART.md  CLAUDE.md  COLLABORATOR_GUIDE.md  Cargo.toml  EXPERIMENT_FEATURES_SUMMARY.md  FINAL_SETUP_GUIDE.md  HOW_TO_RUN_COMPLETE_TEST.md  HOW_TO_RUN_EXPERIMENTS.md  HOW_TO_VIEW_RESULTS.md  IMPLEMENTATION_COMPLETE.md  LIVE_VISUALIZATION_GUIDE.md  QUICK_START_FOR_COLLABORATORS.md  QUICK_TEST.md  README.md  README_TESTING.md  RESULT_ANALYSIS_GUIDE.md  STANDALONE_LIVE_VIEWER_GUIDE.md  UPDATES_SUMMARY.md  VOTE_AFTER_COMMIT_EXPLAINED.md  WEEKLY_PRESENTATION_NOTES.md  bgp_dashboard.py  bgp_sentry_main.py  clean_tree.txt  clean_tree_5.txt  clean_tree_7.txt  (+20 more)
analysis/: README.md  asymmetry_analysis.py  asymmetry_plot_data.py  asymmetry_scatter_data.py  blockchain_explorer.py  blockchain_forensics.py  consensus_asymmetry_analysis.py  posthoc_analysis.py  posthoc_blockchain_detection.py  targeted_attack_analyzer.py
bgp_feed/: bgp_collector.py  bgp_generator.py  bgp_simulator.py
bgpchain_node/: bgp_collector.py  block.py  blockchain.py  config.json  network.py  node.py
blockchain/: staking_interface.py  trust_state.py  utils.py
dataset/: DATASET_METHODOLOGY.md
doc/: blockchain_scalability.tex  consensus_confidence.tex  dataset_properties.tex  detection_accuracy.tex
docs/:   context.txt  ATTACK_DETECTION_COMPLETE_SYSTEM.md  ATTACK_EXPERIMENT_SYSTEM.md  (+22 more)
(+3102 files in other folders)
