[package]
name = "bgp-sentry"
version = "0.1.0"
edition = "2021"
description = "BGP-Sentry: Blockchain-based BGP security with Proof-of-Population consensus"
authors = ["Anik Tahabilder"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ed25519 signatures
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Hashing (block hash chain)
sha2 = "0.10"
hex = "0.4"

# Environment / config
dotenvy = "0.15"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# UUID for transaction IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IP address handling (for bogon detection)
ipnet = "2"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
